# end

./: .clangd  .commit-msg  .gitattributes  .gitignore  .gitmodules  .nvim-standalone-config  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  DEBT.md  DESIGN.md  PLAN-ACTION-LIST-REFACTOR.md  PLAN-GPU-PROBE.md  PLAN-IMAGE.md  PLAN-KEYBINDING.md  PLAN-PANES.md  PLAN-TABS.md  PLAN-TEXT-SELECTION.md  PLAN-WHELMED.md  PLAN-action-list.md  PLAN-appstate-xml.md  PLAN-atlas-ownership.md  PLAN-cell-transport.md  PLAN-cpu-rendering-optimization.md  PLAN-daemon-lifecycle.md  PLAN-fix-active-prompt.md  PLAN-fix-window-software-render-compositing.md  PLAN-fix-zoom.md  PLAN-font-metrics.md  PLAN-glyph-object.md  PLAN-grid-redesign.md  PLAN-hyperlinks.md  PLAN-jam-migration.md  PLAN-kitty-overlay.md  PLAN-logical-line-grid.md  PLAN-lua-engine.md  PLAN-mux-server.md  PLAN-nexus-cleanup.md  PLAN-nexus.md  PLAN-nude-screen.md  (+56 more)
.claude/: settings.json
.claude/agents/: auditor.md  brainstormer.md  counselor.md  engineer.md  librarian.md  machinist.md  oracle.md  pathfinder.md  researcher.md  surgeon.md
.claude/commands/: ask.md  audit.md  counselor.md  go.md  goplan.md  handoff.md  hey.md  log.md  ode.md  pay.md  stop.md  surgeon.md
.end/1 Source/: Main.cpp  MainComponent.cpp  MainComponent.h
.end/1 Source/component/: CursorComponent.h  TerminalComponent.cpp  TerminalComponent.h
.end/1 Source/config/: Config.cpp  Config.h
.end/2 JUCE Modules/juce_core/: juce_core.cpp  (+1 more)
Source/: AppIdentifier.h  AppLayout.cpp  AppLayout.h  AppParameters.xml  AppState.cpp  AppState.h  Cursor.cpp  Cursor.h  Gpu.cpp  Gpu.h  Gpu.mm  Gpu_mac.mm  Gpu_windows.cpp  Main.cpp  MainComponent.cpp  MainComponent.h  MainComponentActions.cpp  ModalType.h  SelectionType.h  TeardownLog.h
Source/action/: Action.cpp  Action.h  ActionList.cpp  ActionList.h  ActionListBinding.cpp  ActionListSelection.cpp  ActionRow.cpp  ActionRow.h  KeyHandler.cpp  KeyHandler.h  KeyRemapDialog.cpp  KeyRemapDialog.h  LookAndFeel.cpp  LookAndFeel.h
Source/component/: CursorComponent.h  Dialog.cpp  Dialog.h  InputHandler.cpp  InputHandler.h  LoaderOverlay.h  LookAndFeel.cpp  LookAndFeel.h  LookAndFeelMenu.cpp  LookAndFeelTab.cpp  MessageOverlay.h  ModalWindow.cpp  ModalWindow.h  MouseHandler.cpp  MouseHandler.h  PaneComponent.h  Panes.cpp  Panes.h  Popup.cpp  Popup.h  RendererType.h  StatusBarOverlay.h  Tabs.cpp  Tabs.h  TabsActions.cpp  TabsClose.cpp  TerminalComponent.cpp  TerminalComponent.h  TerminalDisplay.cpp  TerminalDisplay.h  TerminalDisplayPreview.cpp  TerminalWindow.cpp  TerminalWindow.h
Source/config/: Config.cpp  Config.h  KeyBinding.cpp  KeyBinding.h  ModalKeyBinding.cpp  ModalKeyBinding.h  WhelmedConfig.cpp  WhelmedConfig.h  default_action.lua  default_display.lua  default_end.lua  default_keys.lua  default_nexus.lua  default_popups.lua  default_whelmed.lua
Source/interprocess/: Channel.cpp  Channel.h  Daemon.cpp  Daemon.h  Daemon.mm  DaemonWindows.cpp  EncoderDecoder.cpp  EncoderDecoder.h  Link.cpp  Link.h  Message.h
Source/lua/: Engine.cpp  Engine.h  EngineConfig.cpp  EngineDefaults.cpp  EngineParse.cpp  EngineParseConfig.cpp  EngineParseDisplay.cpp  EnginePatch.cpp
Source/nexus/: Channel.cpp  Channel.h  Client.cpp  Client.h  Daemon.cpp  Daemon.h  Daemon.mm  Link.cpp  Link.h  Loader.cpp  Loader.h  Log.cpp  Log.h  Message.h  Nexus.cpp  Nexus.h  NexusDaemon.h  NexusDaemon.mm  NexusDaemon_win.cpp  Phrases.h  Server.cpp  Server.h  ServerConnection.cpp  ServerConnection.h  Session.cpp  Session.h  SessionFanout.cpp  Wire.cpp  Wire.h
Source/resources/: mermaid.html
Source/scripting/: Scripting.cpp  Scripting.h  ScriptingParse.cpp  ScriptingPatch.cpp
Source/whelmed/: Block.cpp  Block.h  BlockRenderer.cpp  BlockRenderer.h  CodeBlock.cpp  CodeBlock.h  Component.cpp  Component.h  GenericTokeniser.cpp  GenericTokeniser.h  InputHandler.cpp  InputHandler.h  MermaidBlock.cpp  MermaidBlock.h  MermaidSVGParser.h  Parser.cpp  Parser.h  Screen.cpp  Screen.h  SpinnerOverlay.h  State.cpp  State.h  TableBlock.cpp  TableBlock.h  TextBlock.cpp  TextBlock.h  Tokenizer.cpp  Tokenizer.h
___display___/: A parser for DEC’s ANSI-compatible video terminals.txt  build_fonts.py  build_monolithic.py  fix_nf_names.py  generate_unified_sheets.py  sheet_config.py
___display___/.claude/: settings.json
___display___/carol/: ARCHITECT.md  ARCHITECTURE-WRITER.md  GLYPHSHEET-SPEC.md  NAMES.md  SPRINT-LOG.md  config.yml
___display___/designer/: Display.afdesign  GlyphSheet_Display-MONO-Bold.af  GlyphSheet_Display-MONO-Book.af  GlyphSheet_Display-MONO-Book.af~lock~  GlyphSheet_Display-MONO-Medium.af  end-icon-v2.af~lock~  end-icon.af
carol/: ARCHITECTURE-WRITER.md  ARCHITECTURE-WRITER.md.tmpl  CAROL.md  CAROL.md.tmpl  CLAUDE.md  JRENG-CODING-STANDARD.md  LANGUAGE.md  MANIFESTO.md  ODE.md  PATTERNS-WRITER.md  PATTERNS.md  README.md  README.md.tmpl  SCRIPTS.md  SPEC-FONT-FALLBACK.md  SPEC-WRITER.md  SPRINT-LOG.md  build.sh  config.yml  install.sh  uninstall.sh  workflow.svg.tmpl
carol/carol/: SPRINT-LOG.md  config.yml
carol/roles/: librarian.md  pathfinder.md  researcher.md  validator.md
carol/templates/: config.yml  config.yml.tmpl
design/: build_monolithic.py
design/designer/: GlyphSheet_Display-MONO-Bold.af  GlyphSheet_Display-MONO-Book.af  GlyphSheet_Display-MONO-Medium.af  end-icon.af  end-icon.af~lock~
modules/jreng_core/: jreng_core.cpp  jreng_core.h
modules/jreng_data_structures/: jreng_data_structures.cpp  jreng_data_structures.h
modules/jreng_freetype/: jreng_freetype.cpp  jreng_freetype.h  jreng_freetype.mm
modules/jreng_glyph/: jreng_glyph.cpp  jreng_glyph.h  jreng_glyph.mm
modules/jreng_graphics/: jreng_graphics.cpp  jreng_graphics.h  jreng_graphics.mm
modules/jreng_gui/: jreng_gui.cpp  jreng_gui.h  jreng_gui.mm
modules/jreng_javascript/: jreng_javascript.cpp  jreng_javascript.h
modules/jreng_markdown/: jreng_markdown.cpp  jreng_markdown.h
modules/jreng_opengl/: jreng_opengl.cpp  jreng_opengl.h  jreng_opengl.mm
test/: braille_test.txt  emoji_test.sh  font-compare.sh  mermaid.md  test.md
tools/: render-test.sh
(+1618 files in other folders)
